# flickflow

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindLeap.cmake
report/: report.md
shaders/: add.frag  advect.frag  all.vert  boundary.frag  divergence.frag  gradient.frag  jacobi.frag  splat.frag  visualize.frag  vorticity.frag  vorticityForce.frag
src/: CMakeLists.txt  fluidDynamics.cpp  fluidDynamics.h  main.cpp  shaderUtils.h  slab.cpp  slab.h
src/shaders/: advect.frag  boundary.frag  divergence.frag  gradient.frag  jacobi.frag  vert.glsl
